Fix up extrinsics after a refactor

--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -127,7 +127,7 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     \var{[(r, a, [(v, \se_2(i), s) \mid (v, i, s) \orderedin \mathbf{v}]) \mid (r, a, \mathbf{v}) \orderedin \mathbf{j}]}, \var{\mathbf{c}}, \var{\mathbf{f}},\ \\
     &\var{[\tup{s, \var{p}} \mid \tup{s, p} \orderedin \xtpreimages]},\ 
     \var{\xtassurances},\ 
-    \var{[\tup{c, w, \var{a}} \mid \tup{c, w, a} \orderedin \xtguarantees]}
+    \var{[\tup{w, \se_4(t), \var{a}} \mid \tup{w, t, a} \orderedin \xtguarantees]}
   \end{aligned}\;\right\rparen \\
   \nonumber &\quad \where \xtdisputes \equiv (\mathbf{j}, \mathbf{c}, \mathbf{f}) \\
   \se(\mathbf{H}) &= \se_U(\mathbf{H})\concat\se(\mathbf{H}_s) \\
