Fix invocation index holes for `new` and `assign`

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -389,7 +389,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_A(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}))$ \\
-  \texttt{assign} \\
+  \texttt{assign} = 6 \\
   $g = 10$} &
   $\begin{aligned}
     \using o &= \omega_1 \\
@@ -406,7 +406,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_D(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}))$ \\
-  \texttt{designate} = 6 \\
+  \texttt{designate} = 7 \\
   $g = 10$} &
   $\begin{aligned}
     \using o &= \omega_0 \\
@@ -422,7 +422,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_C(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}))$ \\
-  \texttt{checkpoint} = 7 \\
+  \texttt{checkpoint} = 8 \\
   $g = 10$} &
   $\begin{aligned}
     \mathbf{y'} &\equiv \mathbf{x} \\
@@ -432,7 +432,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_N(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}))$ \\
-  \texttt{new} \\
+  \texttt{new} = 9 \\
   $g = 10$} &
   $\begin{aligned}
     \using [o, l, g_l, g_h, m_l, m_h] &= \omega_{0..6} \\
@@ -457,7 +457,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
     $\Omega_U(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s)$ \\
-    \texttt{upgrade} = 8 \\
+    \texttt{upgrade} = 10 \\
     $g = 10$
   } &
   $\begin{aligned}
@@ -476,7 +476,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_T(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s, \delta)$ \\
-  \texttt{transfer} = 9 \\
+  \texttt{transfer} = 11 \\
   $g = 10 + \omega_1 + 2^{32}\cdot\omega_2 $} &
   $\begin{aligned}
     \using (d, a_l, a_h, g_l, g_h, o) &= \omega_{0..6},  \\
@@ -499,7 +499,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_X(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s)$ \\
-  \texttt{quit} = 10 \\
+  \texttt{quit} = 12 \\
   $g = 10 + \omega_1 + 2^{32}\cdot\omega_2 $} &
   $\begin{aligned}
     \using [d, o] &= \omega_{0,1} \\
@@ -521,7 +521,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_S(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}))$ \\
-  \texttt{solicit} = 11 \\
+  \texttt{solicit} = 13 \\
   $g = 10$} &
   $\begin{aligned}
     \using [o, z] &= \omega_{0, 1} \\
@@ -545,7 +545,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_F(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), t)$ \\
-  \texttt{forget} = 12 \\
+  \texttt{forget} = 14 \\
   $g = 10$} &
   $\begin{aligned}
     \using [o, z] &= \omega_{0, 1} \\
@@ -586,7 +586,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \endhead
   \makecell*[l]{
   $\Omega_H(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), s, \delta, t)$ \\
-  \texttt{historical\_lookup} = 13 \\
+  \texttt{historical\_lookup} = 15 \\
   $g = 10$} &
   $\begin{aligned}
     \using \mathbf{a} &= \begin{cases}
@@ -615,7 +615,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_Y(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), \mathbf{i})$ \\
-  \texttt{import} = 14 \\
+  \texttt{import} = 16 \\
   $g = 10$} &
   $\begin{aligned}
     \using \mathbf{v} &= \begin{cases}
@@ -637,7 +637,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_Z(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}), \segoff)$ \\
-  \texttt{export} = 15 \\
+  \texttt{export} = 17 \\
   $g = 10$} &
   $\begin{aligned}
     \using p &= \omega_0 \\
@@ -655,7 +655,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_M(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{machine} = 16 \\
+  \texttt{machine} = 18 \\
   $g = 10$} &
   $\begin{aligned}
     \using [p_o, p_z, i] &= \omega_{0 \dots 3} \\
@@ -673,7 +673,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_P(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{peek} = 17 \\
+  \texttt{peek} = 19 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, a, b, l] &= \omega_{0 \dots 4} \\
@@ -691,7 +691,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_O(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{poke} = 18 \\
+  \texttt{poke} = 20 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, a, b, l] &= \omega_{0 \dots 4} \\
@@ -716,7 +716,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_K(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{invoke} = 19 \\
+  \texttt{invoke} = 21 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, o] &= \omega_{0 \dots 2} \\
@@ -745,7 +745,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_X(\xi, \omega, \mu, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{expunge} = 20 \\
+  \texttt{expunge} = 22 \\
   $g = 10$} &
   $\begin{aligned}
     \using n &= \omega_{0} \\
