--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -163,11 +163,11 @@ We define the constant-depth binary Merkle function as $\mathcal{M}$ and the cor
   \end{aligned}\right.\\
   \mathcal{J}&\colon \left\{\begin{aligned}\label{eq:constantdepthmerklejust}
     (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \H\\
-    (\mathbf{v}, i, H) &\mapsto \raisebox{5pt}{$\smallfrown$}(T(C(\mathbf{v}), i, H))
+    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}), i, H)
   \end{aligned}\right.\\
   \mathcal{J}_x&\colon \left\{\begin{aligned}\label{eq:constantdepthsubtreemerklejust}
     (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \H\\
-    (\mathbf{v}, i, H) &\mapsto \raisebox{5pt}{$\smallfrown$}(T(C(\mathbf{v}), i, H)_{\dots\max(0, \ceil{\log_2(|\mathbf{v}|) - x})})
+    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}), i, H)_{\dots\max(0, \ceil{\log_2(|\mathbf{v}|) - x})}
   \end{aligned}\right.
 \end{align}
 
