Defined set name for S is availability specification

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -53,7 +53,7 @@
   \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. A superset of $\Y_{2^{32}}$. See appendix \ref{sec:virtualmachine}.
   \item[$\mathbb{O}$] The accumulation operand element, corresponding to a single work result.
   \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
-  \item[$\mathbb{S}$] The set of work-package specifications.
+  \item[$\mathbb{S}$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
   \item[$\mathbb{U}$] Unused.
   \item[$\mathbb{V}_{\mu}$] The set of validly readable indices for \textsc{pvm} \textsc{ram} $\mu$. See appendix \ref{sec:virtualmachine}.
