Correct H to Lambda in historical lookup

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -599,7 +599,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
       \mathcal{H}(\mu_{h_o\dots+32}) &\when \mathbb{Z}_{h_o \dots+ 32} \subset \mathbb{V}_{\mu} \\
       \error &\otherwise
     \end{cases} \\
-    \using \mathbf{v} &= H(\mathbf{a}, t, h) \\
+    \using \mathbf{v} &= \Lambda(\mathbf{a}, t, h) \\
     \forall i \in \N_{\min(b_z, |\mathbf{v}|)} : \mu'_{b_o + i} &\equiv \begin{cases}
       \mathbf{v}_i & \when \mathbf{v} \ne \none \wedge \mathbb{Z}_{b_o \dots+ b_z} \subset \mathbb{V}^*_{\mu} \\
       \mu_{b_o + i} & \otherwise
