--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -110,8 +110,7 @@ The state's good-set, bad-set and wonky-set assimilate the hashes of the reports
 
 \subsection{Header}\label{sec:judgementmarker}
 
-The verdicts and offenders markers must contain exactly the sequence of report hashes of all new bad \& wonky verdicts and keys of all new offenders, respectively. Formally:
+The offenders markers must contain exactly the keys of all new offenders, respectively. Formally:
 \begin{align}
-  \mathbf{H}_j &\equiv \sq{r \mid \tup{r, t} \orderedin \verdicts, t \ne \floor{\nicefrac{2}{3}\mathsf{V}} + 1}\\
   \mathbf{H}_o &\equiv \sq{ k \mid (r, k, s) \in \xtculprits} \frown \sq{ k \mid (r, v, k, s) \in \xtfaults }
 \end{align}
