--- a/text/header.tex
+++ b/text/header.tex
@@ -47,10 +47,10 @@ All blocks have an associated public key to identify the author of the block. We
 \subsection{The Markers}\label{sec:markers}
 
 If not $\none$, then the epoch marker specifies key and entropy relevant to the following epoch in case the ticket contest does not complete adequately (a very much unexpected eventuality). Similarly, the winning-tickets marker, if not $\none$, provides the series of 600 slot sealing ``tickets'' for the next epoch (see the next section). Finally, the offenders marker is the sequence of Ed25519 keys of newly misbehaving validators, to be fully explained in section \ref{sec:disputes}. Formally:
-\begin{align}
-  \mathbf{H}_e &\in \tuple{\H\ts\lseq\H_B\rseq_{\mathsf{V}}}\bm{?}
-  &\mathbf{H}_w &\in \seq{\mathbb{C}} _{\mathsf{E}}\bm{?} \\
-  &\mathbf{`H}_o &\in \seq{\H_E}
-\end{align}
+\begin{equation}
+  \mathbf{H}_e \in \tuple{\H\ts\lseq\H_B\rseq_{\mathsf{V}}}\bm{?}\,,\quad
+  \mathbf{H}_w \in \seq{\mathbb{C}} _{\mathsf{E}}\bm{?}\,,\quad
+  \mathbf{H}_o \in \seq{\H_E}
+\end{equation}
 
 The terms are fully defined in sections \ref{sec:epochmarker} and \ref{sec:disputes}.
