--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -95,9 +95,9 @@ There are some constraints placed on the composition of this extrinsic: any verd
 We clear any work-reports which we judged as uncertain or invalid from their core:
 \begin{equation}\label{eq:removenonpositive}
   \forall c \in \N_\mathsf{C} : \rho^\dagger[c] = \begin{cases}
-    \none &\when \{ (\rho[c]_r, t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
-    \rho_c &\otherwise
-  \end{cases}
+    \none &\!\!\!\!\when \{ (\mathcal{H}(\rho[c]_r), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
+    \rho_c &\!\!\!\!\otherwise
+  \end{cases}\!\!\!\!\!\!\!
 \end{equation}
 
 The state's good-set, bad-set and wonky-set assimilate the hashes of the reports from each verdict. Finally, the punish-set accumulates the keys of any validators who have been found guilty of offending. Formally:
