Merklisation: MMR encoding function results in octet sequence

--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -225,7 +225,7 @@ We define the append function $\mathcal{A}$ as:
 We define the \textsc{mmr} encoding function as $\se_M$:
 \begin{equation}
   \se_M\colon\deffunc{
-    \seq{\H?} &\to \H \\
+    \seq{\H?} &\to \Y \\
     \mathbf{b} &\mapsto \se(\var{[\maybe{x}\mid x \orderedin \mathbf{b}]})
   }
 \end{equation}
